# ptrace-wrap

./: .gitignore  CMakeLists.txt  Makefile  README.md  meson.build
include/: ptrace_wrap.h
src/: ptrace_wrap.c
test/: CMakeLists.txt  main.c  meson.build
